--- a/web-demo/style.css
+++ b/web-demo/style.css
@@ -1,40 +1,162 @@
-#blockchain-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .blockchain-row {
-    display: flex;
-  }
-  
-  .blockchain-block {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    border: 2px solid black;
-    font-size: 20px;
-    text-align: center;
-    line-height: 100px;
-    cursor: pointer;
-  }
-  
-  #popup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    height: 80%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border: 2px solid black;
-  }
-  
-  #popup-close {
-    margin-top: 10px;
-  }
-  
+.form-control-dark {
+  border-color: var(--bs-gray);
+}
+.form-control-dark:focus {
+  border-color: #fff;
+  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+}
 
-  
+.text-small {
+  font-size: 85%;
+}
+
+.dropdown-toggle:not(:focus) {
+  outline: 0;
+}
+
+.vertical-chain {
+  /* border: 1px dashed red; */
+  border-right: 4px solid black;
+  height: 300vh;
+  width: 16.5vw;
+  transform: translateY(-50%);
+  z-index: -10;
+  position: absolute;
+}
+
+.list-group {
+  width: 100%;
+  max-width: 460px;
+  margin-inline: 1.5rem;
+}
+
+.form-check-input:checked + .form-checked-content {
+  opacity: .5;
+}
+
+.form-check-input-placeholder {
+  border-style: dashed;
+}
+[contenteditable]:focus {
+  outline: 0;
+}
+
+.list-group-checkable .list-group-item {
+  cursor: pointer;
+  width: 33vw;
+  height: 33vw;
+  border: 2px solid black;
+  transform: translateX(0%);
+}
+/* .list-group-item::after {
+  content: 'sdfsdfsd';
+  width: 100%;
+  height: 100%;
+  border: 1px dashed red;
+} */
+.list-group-item-check {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+}
+.list-group-item-check:hover + .list-group-item {
+  background-color: var(--bs-secondary-bg);
+}
+.list-group-item-check:checked + .list-group-item {
+  color: #fff;
+  background-color: var(--bs-primary);
+  border-color: var(--bs-primary);
+}
+.list-group-item-check[disabled] + .list-group-item,
+.list-group-item-check:disabled + .list-group-item {
+  pointer-events: none;
+  filter: none;
+  opacity: .5;
+}
+
+.list-group-radio .list-group-item {
+  cursor: pointer;
+  border-radius: .5rem;
+}
+.list-group-radio .form-check-input {
+  z-index: 2;
+  margin-top: -.5em;
+}
+.list-group-radio .list-group-item:hover,
+.list-group-radio .list-group-item:focus {
+  background-color: var(--bs-secondary-bg);
+}
+
+.list-group-radio .form-check-input:checked + .list-group-item {
+  background-color: var(--bs-body);
+  border-color: var(--bs-primary);
+  box-shadow: 0 0 0 2px var(--bs-primary);
+}
+.list-group-radio .form-check-input[disabled] + .list-group-item,
+.list-group-radio .form-check-input:disabled + .list-group-item {
+  pointer-events: none;
+  filter: none;
+  opacity: .5;
+}
+
+#block-visualization {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  display: none;
+  max-width: 400px;
+  width: 80%;
+  height: 80vh;
+  overflow-y: scroll;
+}
+
+.popup-content {
+  margin-bottom: 20px;
+}
+
+.block-info-title {
+  margin-top: 0;
+}
+
+.close-btn,
+.delete-btn {
+  padding: 8px 16px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.close-btn {
+  margin-right: 10px;
+}
+
+#last-block {
+  z-index: 1;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color:rgba(0, 0, 0, 0.5)
+}
